Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5, 6.6
-
None
-
d8a3de9f5 (dev), b403296a2 (6.6), 18fb8b976 (6.5), dc0c88878 (dev), 6b9d7df1a (6.6), d2886b4a6 (6.5)
Description
There is conflict with tracepoint TRACE_INFO constant and QtQuick3D TRACE_INFO logging category.
Other problem is that there are many linking errors to tracepoint functions and dlsym.
Attachments
For Gerrit Dashboard: QTBUG-116559 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
500035,2 | Remove TRACE_INFO logging category | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
500253,2 | Remove TRACE_INFO logging category | 6.6 | qt/qtquick3d | Status: MERGED | +2 | 0 |
500254,2 | Remove TRACE_INFO logging category | 6.5 | qt/qtquick3d | Status: MERGED | +2 | 0 |
500464,3 | Quick3D: Fix linker errors with -trace lttng | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
500650,2 | Quick3D: Fix linker errors with -trace lttng | 6.6 | qt/qtquick3d | Status: MERGED | +2 | 0 |
500651,2 | Quick3D: Fix linker errors with -trace lttng | 6.5 | qt/qtquick3d | Status: MERGED | +2 | 0 |