Quick3D: Fix linker errors with -trace lttng

Create tracepoints separately for each module.

Fixes: QTBUG-116559
Change-Id: I7396ba3b329116eb9cbc8bb48214b75aec118a49
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
(cherry picked from commit dc0c88878b6b482504eb1650a72a03b5280f1597)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>